# RSA

./: README.md  eval_frontierscience.py  judge_utils.py  pyproject.toml  to_run.sh
eval/frontierscience/claude-sonnet-4-6_thinking-adaptive/: agg_example_loop_1.txt  agg_example_loop_2.txt  agg_example_loop_3.txt  agg_example_loop_4.txt  agg_example_loop_5.txt  rollouts_k_4_N_16.jsonl
